fixed navigation on mobile

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1058,9 +1058,9 @@ $topbar-dropdown-label-bg: $topbar-bg-image;
 // $topbar-menu-link-transform: uppercase;
 // $topbar-menu-link-font-size: rem-calc(13);
 // $topbar-menu-link-weight: bold;
-// $topbar-menu-link-color: #000202;
-// $topbar-menu-icon-color: #888;
-// $topbar-menu-link-color-toggled: #888;
+$topbar-menu-link-color: #033;
+$topbar-menu-icon-color: #033;
+$topbar-menu-link-color-toggled: #033;
 // $topbar-menu-icon-color-toggled: #888;
 
 // Transitions and breakpoint styles
